<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">Kids Fun School</string>
    <string name="choices">Select Number of Choices</string>
   <string name="correct">correct</string>
   <string name="guess_country">Guess the Image</string>
   <string name="guesses">guesses</string>
   <string name="incorrect_answer">Incorrect!</string>
   <string name="more_regions_title">More Regions Required</string>
   <string name="more_regions_message">There are not enough countries in 
      the selected regions. Please select more regions.</string>
   <string name="of">of</string>
   <string name="ok">OK</string>
   <string name="question">Question</string>
   <string name="quiz_title">Ten Question Quiz</string>
   <string name="regions">Select Regions</string>
   <string name="reset_quiz">Reset Quiz</string>    
    <string name="mainmenu_quiz">Main Menu</string>  
   <string name="action_settings"></string>
   
    <string name="Vegetables">Vegetables</string>
    <string name="monument">Monuments</string>
    <string name="flag">Flag</string>
    <string name="fruit">Fruit</string>
    <string name="animal">Animals</string>
    <string name="fruits">Fruits</string>
    
    <string name="play">Play</string>
    
    
        <string-array name="animalsList">
        <item>animal</item>
      </string-array>   
      
      <string-array name="vegetablesList">
        <item>vegetable</item>
      </string-array>  
      
      <string-array name="fruitsList">
        <item>fruit</item>
      </string-array>  
   
      <string-array name="monumentsList">
        <item>monument</item>
      </string-array>  
      
   <string-array name="regionsList">
      
      <item>Africa</item>
      <item>Asia</item>
      <item>Europe</item>
      <item>North_America</item>
      <item>Oceania</item>
      <item>South_America</item>
   </string-array>
   
   <string-array name="guessesList">
      <item>3</item>
      <item>6</item>
      <item>9</item>
   </string-array>



</resources>
