<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/correct_answer"
    android:columnCount="3"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ksingharawat.kidsfunschool.MainActivity" >

    <Space
        android:id="@+id/Space1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical" />

    <ImageButton
        android:id="@+id/animalButton"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="5dp"
        android:src="@drawable/animals" />

    <TextView
        android:id="@+id/animalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/animal"
        android:text="@string/animal" />

    <ImageButton
        android:id="@+id/flagButton"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/flag"
        android:src="@drawable/flag" />

    <TextView
        android:id="@+id/flagTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/flag"
        android:text="@string/flag" />

    <ImageButton
        android:id="@+id/monumentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/monument"
        android:src="@drawable/monuments" />

    <TextView
        android:id="@+id/monumentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="300dp"
        android:text="@string/monument" />

    <ImageButton
        android:id="@+id/vegetablesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:src="@drawable/vegetables" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="460dp"
        android:text="@string/Vegetables" />

    <ImageButton
        android:id="@+id/fruitsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="320dp"
        android:contentDescription="@string/fruits"
        android:src="@drawable/fruits" />

    <TextView
        android:id="@+id/fruitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="460dp"
        android:text="@string/fruits" />

</RelativeLayout>
