<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainback"
    android:columnCount="3"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ksingharawat.kidsfunschool.Main" >

    <Space
        android:id="@+id/Space1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical" />

    <ImageButton
        android:id="@+id/animalButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="false"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/ani_icon"
        android:src="@drawable/ani_icon" />

    <TextView
        android:id="@+id/animalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/animal"
        android:text="@string/animal"
        android:textColor="@color/text_color" />

    <ImageButton
        android:id="@+id/flagButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/flag"
        android:src="@drawable/icon_flag" />

    <TextView
        android:id="@+id/flagTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="260dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/flag"
        android:text="@string/flag"
        android:textColor="@color/text_color" />

    <ImageButton
        android:id="@+id/monumentButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/monument"
        android:src="@drawable/icon_monu" />

    <TextView
        android:id="@+id/monumentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="280dp"
        android:text="@string/monument"
        android:textColor="@color/text_color" />

    <ImageButton
        android:id="@+id/vegetablesButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="305dp"
        android:src="@drawable/veg_icon" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="460dp"
        android:text="@string/Vegetables"
        android:textColor="@color/text_color" />

    <ImageButton
        android:id="@+id/fruitsButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="305dp"
        android:background="@drawable/fruit_icon"
        android:contentDescription="@string/fruits"
        android:src="@drawable/icon_fruit" />

    <TextView
        android:id="@+id/fruitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginLeft="260dp"
        android:text="@string/fruits"
        android:textColor="@color/text_color" />

</RelativeLayout>
